--- a/idl/idl-codegen/src/main/resources/java-idl/libraries/google-api-client/api.mustache
+++ b/idl/idl-codegen/src/main/resources/java-idl/libraries/google-api-client/api.mustache
@@ -99,14 +99,12 @@ public class {{classname}} {
         if ({{paramName}} == null) {
             throw new IllegalArgumentException("Missing the required parameter '{{paramName}}' when calling {{operationId}}");
         }{{/required}}{{/allParams}}
-
-        {{#vendorExtensions}}{{#x-dependencies}}
+        {{#vendorExtensions.x-dependencies}}
         // Check dependency: {{& idlDependency}}
-        if(!{{& assertOperation}}){
+        if({{& assertOperation}}){
             throw new IllegalArgumentException("Dependency not satisfied: {{& idlDependency}}");
         }
-        {{/x-dependencies}}{{/vendorExtensions}}
-
+        {{/vendorExtensions.x-dependencies}}
         {{#hasPathParams}}
         // create a map of path variables
         final Map<String, Object> uriVariables = new HashMap<String, Object>();{{#pathParams}}
