--- a/idl/idl-codegen/src/main/resources/java-idl/libraries/jersey2/api.mustache
+++ b/idl/idl-codegen/src/main/resources/java-idl/libraries/jersey2/api.mustache
@@ -123,14 +123,12 @@ public class {{classname}} {
       throw new ApiException(400, "Missing the required parameter '{{paramName}}' when calling {{operationId}}");
     }
     {{/required}}{{/allParams}}
-
-    {{#vendorExtensions}}{{#x-dependencies}}
+    {{#vendorExtensions.x-dependencies}}
     //Check dependency: {{& idlDependency}}
-    if(!{{& assertOperation}}){
+    if({{& assertOperation}}){
       throw new ApiException(400, "Dependency not satisfied: {{& idlDependency}}");
     }
-    {{/x-dependencies}}{{/vendorExtensions}}
-
+    {{/vendorExtensions.x-dependencies}}
     // create path and map variables
     String localVarPath = "{{{path}}}"{{#pathParams}}
       .replaceAll("\\{" + "{{baseName}}" + "\\}", apiClient.escapeString({{{paramName}}}.toString())){{/pathParams}};
