--- a/idl/idl-codegen/src/main/resources/fastapi-idl/api.mustache
+++ b/idl/idl-codegen/src/main/resources/fastapi-idl/api.mustache
@@ -14,6 +14,7 @@ from fastapi import (  # noqa: F401
     Response,
     Security,
     status,
+    HTTPException,
 )
 
 from {{modelPackage}}.extra_models import TokenModel  # noqa: F401
